# continuity

./: .gitignore  .prettierignore  CHANGELOG.json  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  Continuity.nuspec  Microsoft.ReactNative.SDK.nuspec  README.md  cpp.hint  package.json  packages.config
.ado/: build.yml  pr.yml  publish.yml  release-build.yml  test.yml  toolchain.windows.cmake  variables.yml  vcenv.bat
.ado/templates/: download-and-stage-artifact.yml  windows-build-job.yml  windows-build.yml  windows-publish-build-artifact.yml  windows-publish.yml
CMake/: FetchContentExtension.cmake  NuGet.cmake  boost.cmake  folly.cmake  rnsdk.cmake  toolchain.windows.cmake
apps/manifesttest/: App.js  app.json  index.js  package.json
apps/manifesttest/android/: settings.gradle
apps/manifesttest/android/app/: BUCK  build.gradle
apps/manifesttest/ios/: Podfile
apps/manifesttest/ios/manifesttest.xcodeproj/: project.pbxproj
apps/manifesttest/ios/manifesttest.xcworkspace/: contents.xcworkspacedata
change/: @microsoft-continuity-2020-03-04-00-18-14-abi.json  @microsoft-continuity-2020-03-04-00-34-12-abi.json  @microsoft-continuity-2020-03-04-00-57-06-afoxman-docs.json  @microsoft-continuity-2020-03-04-13-02-55-afoxman-libname.json  @microsoft-continuity-2020-03-05-01-22-21-afoxman-fix-x86.json  @microsoft-continuity-2020-03-10-02-27-57-afoxman-ci.json  @microsoft-continuity-2020-03-10-17-51-30-afoxman-ci.json  @microsoft-continuity-2020-03-10-23-26-08-afoxman-ci.json  @microsoft-continuity-2020-03-11-01-57-41-afoxman-ci.json  @microsoft-continuity-2020-03-12-00-16-13-afoxman-ci.json  @microsoft-continuity-2020-03-12-08-52-11-afoxman-ci.json  @microsoft-continuity-2020-03-12-10-55-43-afoxman-ci.json  @microsoft-continuity-2020-03-12-11-55-12-afoxman-ci.json  @microsoft-continuity-2020-03-14-02-19-18-afoxman-ci.json  @microsoft-continuity-2020-03-14-02-39-53-afoxman-set-nuget-id.json  @microsoft-continuity-2020-03-14-03-01-00-afoxman-merge-jobs.json  @microsoft-continuity-2020-03-14-23-10-03-afoxman-test-ci.json  @microsoft-continuity-2020-03-15-00-21-51-afoxman-disable-cgd.json  @microsoft-continuity-2020-03-16-15-54-13-afoxman-bot-merge.json  @microsoft-continuity-2020-03-17-01-36-38-afoxman-fix-boost-and-docs.json  @microsoft-continuity-2020-03-17-15-14-07-afoxman-build-fixes.json  @microsoft-continuity-2020-03-17-15-56-28-afoxman-manifest-collection-by-index.json  @microsoft-continuity-2020-03-19-22-30-56-afoxman-test-infra.json  @microsoft-continuity-2020-03-19-22-32-41-afoxman-test-infra.json  @microsoft-continuity-2020-03-20-14-42-35-afoxman-fix-ut.json  @microsoft-continuity-2020-03-20-15-42-20-afoxman-nuget-fix.json  @microsoft-continuity-2020-03-20-16-19-23-afoxman-nuget-fix.json  @microsoft-continuity-2020-03-20-16-36-38-afoxman-fix-nuget-pack-path.json  @microsoft-continuity-2020-03-20-23-31-58-afoxman-fix-find-component.json  @microsoft-continuity-2020-03-22-02-28-38-afoxman-vs.json  @microsoft-react-native-sdk-2020-03-22-20-24-41-afoxman-rename.json  @microsoft-react-native-sdk-2020-03-23-00-47-35-afoxman-scripts.json  @microsoft-react-native-sdk-2020-04-08-18-21-59-afoxman-build-updates.json  @microsoft-react-native-sdk-2020-05-18-15-05-11-afoxman-switch-v141.json  @microsoft-react-native-sdk-2020-12-15-16-02-14-afoxman-bumpver.json
include/Continuity/: ReactApi.h  ReactManifest.h
include/React/: DynamicReader.h  Error.h  ReactManifest.h
include/React/Manifest/: Manifest.h  ManifestBundle.h  ManifestComponent.h  ManifestPackager.h  ManifestRuntime.h  ManifestRuntimeLibrary.h  ManifestRuntimeWin32.h  ManifestRuntimeWin32Container.h
include/ReactNative/: DynamicReader.h  Error.h
include/ReactNative/Manifest/: Manifest.h  ManifestBundle.h  ManifestComponent.h  ManifestPackager.h  ManifestRuntime.h  ManifestRuntimeLibrary.h  ManifestRuntimeWin32.h  ManifestRuntimeWin32Container.h
include/ReactNative/SDK/: ReactApi.h  ReactManifest.h
scripts/: build-windows.cmd  test-windows.cmd
src/: CMakeLists.txt
src/Continuity/: CMakeLists.txt  Continuity.x64.def  Continuity.x86.def  DynamicReader.cpp  DynamicReader.h
src/Continuity/Manifest/: Manifest.cpp  Manifest.h  ManifestBundle.h  ManifestComponent.cpp  ManifestComponent.h  ManifestPackager.cpp  ManifestPackager.h  ManifestRuntime.h  ManifestRuntimeLibrary.h  ManifestRuntimeWin32.h  ManifestRuntimeWin32Container.cpp  ManifestRuntimeWin32Container.h
src/Executor/: Host.cpp  Host.h  Packager.cpp  Packager.h
src/Folly/: CMakeLists.txt  Folly.natvis
src/Folly/stubs/: unistd.h
src/Folly/stubs/double-conversion/: double-conversion.h
src/Folly/stubs/folly/: SafeAssert_EmptyImpl.cpp  folly-config.h
src/Folly/stubs/glog/: logging.h
src/Folly/stubs/sys/: mman.h  time.h
src/React/: CMakeLists.txt  DynamicReader.cpp  Error.cpp
src/React/Manifest/: Manifest.cpp  ManifestBundle.cpp  ManifestBundle.h  ManifestComponent.cpp  ManifestComponent.h  ManifestPackager.cpp  ManifestPackager.h  ManifestRuntime.cpp  ManifestRuntimeLibrary.cpp  ManifestRuntimeLibrary.h  ManifestRuntimeWin32.cpp  ManifestRuntimeWin32Container.cpp
src/React/stubs/: Mso.h
src/ReactNative/: DynamicReader.cpp  Error.cpp
src/ReactNative/Manifest/: Manifest.cpp  ManifestBundle.cpp  ManifestComponent.cpp  ManifestPackager.cpp  ManifestRuntime.cpp  ManifestRuntimeLibrary.cpp  ManifestRuntimeWin32.cpp  ManifestRuntimeWin32Container.cpp
src/ReactNative/SDK/: CMakeLists.txt  DynamicReader.cpp  DynamicReader.h
src/ReactNative/SDK/Manifest/: Manifest.cpp  Manifest.h  ManifestBundle.cpp  ManifestBundle.h  ManifestComponent.cpp  ManifestComponent.h  ManifestPackager.cpp  ManifestPackager.h  ManifestRuntime.cpp  ManifestRuntime.h  ManifestRuntimeLibrary.cpp  ManifestRuntimeLibrary.h  ManifestRuntimeWin32.cpp  ManifestRuntimeWin32.h  ManifestRuntimeWin32Container.cpp  ManifestRuntimeWin32Container.h
src/ReactNative/SDK/stubs/: Mso.h
tests/: CMakeLists.txt
tests/Continuity/: CMakeLists.txt  ManifestTests.cpp
tests/ReactNative/: CMakeLists.txt
tests/ReactNative/SDK/: CMakeLists.txt  ManifestTests.cpp
(+31 files in other folders)
